<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="labelName">Name</string>
    <string name="labelAddress">Address</string>
    <string name="labelBirthday">Birthday</string>
    <string name="labelContactNo">Contact No.</string>
    <string name="labelCourseAndYear">Course and Year</string>
    <string name="labelHeight">Height</string>
    <string name="labelWeight">Weight</string>
    <string name="labelBMI">BMI</string>
    <string name="labelCalculate">Calculate</string>
    <string name="labelInches">Inches</string>
    <string name="LIT_0">0</string>
    <string name="labelReturn">Return</string>
</resources>